@@ -12,6 +12,7 @@ import static org.mockito.Mockito.when;
 
 import cpw.mods.cl.JarModuleFinder;
 import cpw.mods.cl.ModuleClassLoader;
+import cpw.mods.jarhandling.JarResource;
 import cpw.mods.jarhandling.SecureJar;
 import cpw.mods.modlauncher.Environment;
 import cpw.mods.modlauncher.LaunchPluginHandler;
@@ -23,6 +24,7 @@ import cpw.mods.modlauncher.api.IEnvironment;
 import cpw.mods.modlauncher.api.IModuleLayerManager;
 import cpw.mods.modlauncher.api.ITransformationService;
 import cpw.mods.modlauncher.api.ITransformer;
+import cpw.mods.modlauncher.api.NamedPath;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.lang.module.Configuration;
@@ -30,11 +32,11 @@ import java.lang.module.ModuleFinder;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -53,6 +55,7 @@ import net.neoforged.fml.ModLoader;
 import net.neoforged.fml.ModLoadingIssue;
 import net.neoforged.fml.event.IModBusEvent;
 import net.neoforged.fml.i18n.FMLTranslations;
+import net.neoforged.fml.loading.moddiscovery.ModFile;
 import net.neoforged.fml.testlib.IdentifiableContent;
 import net.neoforged.fml.testlib.SimulatedInstallation;
 import net.neoforged.neoforgespi.language.IModFileInfo;
@@ -61,14 +64,10 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.mockito.Mock;
-import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoSettings;
 
 @MockitoSettings
 public abstract class LauncherTest {
-    @Mock
-    MockedStatic<ImmediateWindowHandler> immediateWindowHandlerMock;
-
     protected TestModuleLayerManager moduleLayerManager = new TestModuleLayerManager();
 
     protected TestEnvironment environment = new TestEnvironment(moduleLayerManager);
@@ -88,8 +87,8 @@ public abstract class LauncherTest {
     protected TransformingClassLoader gameClassLoader;
 
     @BeforeAll
-    static void ensureAddOpensForUnionFs() {
-        // We abuse the ByteBuddy agent that Mockito also uses to open java.lang to UnionFS
+    static void ensureAddOpensForModularClassLoader() {
+        // We abuse the ByteBuddy agent that Mockito also uses to open java.lang to ModularClassLoader
         var instrumentation = ByteBuddyAgent.install();
         instrumentation.redefineModule(
                 MethodHandles.class.getModule(),
@@ -137,6 +136,17 @@ public abstract class LauncherTest {
 
     @AfterEach
     void clearSystemProperties() throws Exception {
+        if (LoadingModList.get() != null) {
+            for (var modFile : LoadingModList.get().getModFiles()) {
+                modFile.getFile().close();
+            }
+            for (var modFile : LoadingModList.get().getPlugins()) {
+                ((ModFile) modFile.getFile()).close();
+            }
+            for (var modFile : LoadingModList.get().getGameLibraries()) {
+                ((ModFile) modFile).close();
+            }
+        }
         gameClassLoader = null;
         installation.close();
         Launcher.INSTANCE = null;
@@ -283,6 +293,9 @@ public abstract class LauncherTest {
                 configuration,
                 parents,
                 getClass().getClassLoader());
+        lph.announceLaunch(
+                gameClassLoader,
+                new NamedPath[0]);
 
         var controller = ModuleLayer.defineModules(
                 configuration,
@@ -434,7 +447,7 @@ public abstract class LauncherTest {
 
         for (var identifiableContent : content) {
             var expectedContent = identifiableContent.content();
-            var actualContent = Files.readAllBytes(paths.get(identifiableContent.relativePath()));
+            var actualContent = paths.get(identifiableContent.relativePath()).readAllBytes();
             if (isPrintableAscii(expectedContent) && isPrintableAscii(actualContent)) {
                 assertThat(new String(actualContent)).isEqualTo(new String(expectedContent));
             } else {
@@ -452,17 +465,11 @@ public abstract class LauncherTest {
         return true;
     }
 
-    private static Map<String, Path> listFilesRecursively(SecureJar jar) throws IOException {
-        Map<String, Path> paths;
-        var rootPath = jar.getRootPath();
-        try (var stream = Files.walk(rootPath)) {
-            paths = stream
-                    .filter(Files::isRegularFile)
-                    .map(rootPath::relativize)
-                    .collect(Collectors.toMap(
-                            path -> path.toString().replace('\\', '/'),
-                            Function.identity()));
-        }
+    private static Map<String, JarResource> listFilesRecursively(SecureJar jar) {
+        Map<String, JarResource> paths = new HashMap<>();
+        jar.contents().visitContent((relativePath, resource) -> {
+            paths.put(relativePath, resource.retain());
+        });
         return paths;
     }
 
